--- a/lakedata.Rmd
+++ b/lakedata.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Lake Data"
 output: 
-      # html_document: default
+       html_document: default
       # pdf_document: default
        github_document: default
 
